WeaveWorks-Scope/ecs-identiorca.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: "[Original: https://s3.amazonaws.com/weaveworks-cfn-public/integrations/ecs-identiorca.json]
  Weave-enabled AWS CloudFormation template to create resources required to run tasks
  on an ECS cluster.  This template uses a larger example app. (weaveworks/integrations@cf069691b3f92b1c92fe3ac35d5d2845a5ad573f)"
 
#==================================================#
#                    Parameters                    #
#==================================================#
Parameters:
  EcsInstanceType:
    Type: String
    Description: Type of the EC2 instance(s) to deploy
    Default: t2.micro
    AllowedValues:
    - t2.micro
    - t2.small
    - t2.medium
    - t2.large
    - m3.medium
    - m3.large
    - m3.xlarge
    - m3.2xlarge
    - m4.large
    - m4.xlarge
    - m4.2xlarge
    - m4.4xlarge
    - m4.10xlarge
    - c4.large
    - c4.xlarge
    - c4.2xlarge
    - c4.4xlarge
    - c4.8xlarge
    - c3.large
    - c3.xlarge
    - c3.2xlarge
    - c3.4xlarge
    - c3.8xlarge
    - r3.large
    - r3.xlarge
    - r3.2xlarge
    - r3.4xlarge
    - r3.8xlarge
    - i2.xlarge
    - i2.2xlarge
    - i2.4xlarge
    - i2.8xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  Scale:
    Type: Number
    Description: Size of ECS cluster
    Default: '3'
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access to the ECS instances
      (if none appear in drop-down menu, you need to create one)
    MinLength: '1'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  DeployExampleApp:
    Type: String
    Description: 'No: only Weave Net/Scope net will be deployed, Yes: also deploy
      identiorca example application'
    Default: 'Yes'
    AllowedValues:
    - 'Yes'
    - 'No'
    ConstraintDescription: must be Yes or No
  WeaveCloudServiceToken:
    Type: String
    Description: Optional - Authentication token for Weave Cloud [https://cloud.weave.works/].
      Leave empty to run Scope in Standalone Mode.
    Default: ''

#==================================================#
#                    Conditions                    #
#==================================================#
Conditions:
  DoDeployExampleApp:
    Fn::Equals:
    - Ref: DeployExampleApp
    - 'Yes'
  UseWeaveScopeStandalone:
    Fn::Equals:
    - Ref: WeaveCloudServiceToken
    - ''

#==================================================#
#                    Mappings                      #
#==================================================#
Mappings:
  VpcCidrs:
    vpc:
      cidr: 172.31.0.0/16
    pubsubnet1:
      cidr: 172.31.0.0/24
    pubsubnet2:
      cidr: 172.31.1.0/24
  WeaveworksEcsAmiIds:
    us-east-1:
      ImageId: ami-7b692804  ## ami-9eb4b1e5 (owner: Amazon, date: 2017-03), ami-7b692804 owner: Weaveworks, date: 2018-06-13
    us-east-2:
      ImageId: ami-6a0b350f  ## ami-1c002379 (amazon)
    us-west-1:
      ImageId: ami-4a2c192a
    us-west-2:
      ImageId: ami-1d668865
    eu-west-1:
      ImageId: ami-8fcc32f6
    eu-west-2:
      ImageId: ami-cb1101af
    eu-central-1:
      ImageId: ami-0460cb6b
    ap-northeast-1:
      ImageId: ami-b743bed1
    ap-southeast-1:
      ImageId: ami-9d1f7efe
    ap-southeast-2:
      ImageId: ami-c1a6bda2
    ca-central-1:
      ImageId: ami-b677c9d2

#==================================================#
#                    Resources                     #
#==================================================#
Resources:
  EcsCluster:
    Type: AWS::ECS::Cluster
  EcsBackendDataTask:
    Condition: DoDeployExampleApp
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
      - Essential: true
        Name: redis
        Image: redis:3
        Cpu: 10
        Memory: 300
      Volumes: []
  EcsBackendDataService:
    Condition: DoDeployExampleApp
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: EcsCluster
      DesiredCount: 1
      TaskDefinition:
        Ref: EcsBackendDataTask
  EcsFrontendAppTask:
    Condition: DoDeployExampleApp
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
      - PortMappings:
        - HostPort: 80
          ContainerPort: 9090
        Essential: true
        Name: identiorca
        Image: errordeveloper/identiorca
        Environment:
        - Name: USE_IP_ADDR
          Value: 'yes'
        Cpu: 10
        Memory: 300
      - Essential: true
        Name: dnmonster
        Image: amouat/dnmonster:1.0
        Cpu: 10
        Memory: 300
      Volumes: []
  EcsFrontendAppService:
    Condition: DoDeployExampleApp
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: EcsCluster
      DesiredCount:
        Ref: Scale
      TaskDefinition:
        Ref: EcsFrontendAppTask
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Fn::FindInMap:
        - VpcCidrs
        - vpc
        - cidr
  PubSubnetAz1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc
      CidrBlock:
        Fn::FindInMap:
        - VpcCidrs
        - pubsubnet1
        - cidr
      AvailabilityZone:
        Fn::Select:
        - '0'
        - Fn::GetAZs:
            Ref: AWS::Region
  PubSubnetAz2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc
      CidrBlock:
        Fn::FindInMap:
        - VpcCidrs
        - pubsubnet2
        - cidr
      AvailabilityZone:
        Fn::Select:
        - '1'
        - Fn::GetAZs:
            Ref: AWS::Region
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: Vpc
      InternetGatewayId:
        Ref: InternetGateway
  RouteViaIgw:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc
  PublicRouteViaIgw:
    DependsOn: AttachGateway
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: RouteViaIgw
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  PubSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PubSubnetAz1
      RouteTableId:
        Ref: RouteViaIgw
  PubSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PubSubnetAz2
      RouteTableId:
        Ref: RouteViaIgw
  EcsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS Allowed Ports
      VpcId:
        Ref: Vpc
  EcsSecurityGroupIngressAppPort:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: EcsSecurityGroup
      IpProtocol: tcp
      FromPort: '80'
      ToPort: '80'
      CidrIp: 0.0.0.0/0
  EcsSecurityGroupIngressSshPort:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: EcsSecurityGroup
      IpProtocol: tcp
      FromPort: '22'
      ToPort: '22'
      CidrIp: 0.0.0.0/0
  EcsSecurityGroupIngressWeaveScopeExtPort:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: EcsSecurityGroup
      IpProtocol: tcp
      FromPort: '4040'    ## Port required by Weave Scope
      ToPort: '4040'      ## Port required by Weave Scope
      CidrIp: 0.0.0.0/0
  EcsSecurityGroupIngressWeaveScopeIntPort:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: EcsSecurityGroup
      IpProtocol: tcp
      FromPort: '4040'    ## Port required by Weave Scope
      ToPort: '4040'      ## Port required by Weave Scope
      SourceSecurityGroupId:
        Ref: EcsSecurityGroup
  EcsSecurityGroupIngressWeaveNetIntTcpPort:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: EcsSecurityGroup
      IpProtocol: tcp
      FromPort: '6783'    ## Port required by WeaveNet
      ToPort: '6783'      ## Port required by WeaveNet
      SourceSecurityGroupId:
        Ref: EcsSecurityGroup
  EcsSecurityGroupIngressWeaveNetIntUdpPorts:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId:
        Ref: EcsSecurityGroup
      IpProtocol: udp
      FromPort: '6783'    ## Port required by WeaveNet
      ToPort: '6784'      ## Port required by WeaveNet
      SourceSecurityGroupId:
        Ref: EcsSecurityGroup
  EcsInstancePolicy:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
      Policies:
      - PolicyName: ClusterInstanceRole
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - ecs:CreateCluster
            - ecs:DeregisterContainerInstance
            - ecs:DiscoverPollEndpoint
            - ecs:Poll
            - ecs:RegisterContainerInstance
            - ecs:Submit*
            - ecs:ListClusters
            - ecs:ListContainerInstances
            - ecs:DescribeContainerInstances
            - ecs:ListServices
            - ecs:DescribeTasks
            - ecs:DescribeServices
            - ec2:DescribeInstances
            - ec2:DescribeTags
            - autoscaling:DescribeAutoScalingInstances
            Resource:
            - "*"
  EcsInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - Ref: EcsInstancePolicy
  EcsInstanceLc:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId:
        Fn::FindInMap:
        - WeaveworksEcsAmiIds
        - Ref: AWS::Region
        - ImageId
      InstanceType:
        Ref: EcsInstanceType
      AssociatePublicIpAddress: true
      IamInstanceProfile:
        Ref: EcsInstanceProfile
      KeyName:
        Ref: KeyName
      SecurityGroups:
      - Ref: EcsSecurityGroup
      UserData:
        Fn::Base64:
          Fn::Join:
          - "\n"
          - - "#!/bin/bash -ex"
            - yum install -y aws-cfn-bootstrap
            - Fn::Join:
              - " "
              - - "/opt/aws/bin/cfn-init"
                - "--verbose"
                - "--stack"
                - Ref: AWS::StackName
                - "--region"
                - Ref: AWS::Region
                - "--resource"
                - EcsInstanceLc
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              jq: []
            python:
              awscli: []
          files:
            "/etc/ecs/ecs.config":
              content:
                Fn::Join:
                - ''
                - - ECS_CLUSTER=
                  - Ref: EcsCluster
            "/etc/weave/scope.config":
              content:
                Fn::Join:
                - ''
                - - Fn::If:
                    - UseWeaveScopeStandalone
                    - "## SERVICE_TOKEN="
                    - SERVICE_TOKEN=
                  - Fn::If:
                    - UseWeaveScopeStandalone
                    - "<unset>"
                    - Ref: WeaveCloudServiceToken
            "/etc/init/ecs.override":
              source: https://raw.github.com/weaveworks/integrations/master/aws/ecs/packer/to-upload/ecs.override
            "/etc/init/weave.conf":
              source: https://raw.github.com/weaveworks/integrations/master/aws/ecs/packer/to-upload/weave.conf
            "/etc/init/scope.conf":
              source: https://raw.github.com/weaveworks/integrations/master/aws/ecs/packer/to-upload/scope.conf
            "/etc/weave/run.sh":
              source: https://raw.github.com/weaveworks/integrations/master/aws/ecs/packer/to-upload/run.sh
              mode: '000755'
            "/etc/weave/peers.sh":
              source: https://raw.github.com/weaveworks/integrations/master/aws/ecs/packer/to-upload/peers.sh
              mode: '000755'
            "/usr/local/bin/weave":
              source:
                Fn::Join:
                - "/"
                - - https://github.com/weaveworks/weave/releases/download
                  - v2.0.4
                  - weave
              mode: '000755'
            "/usr/local/bin/scope":
              source:
                Fn::Join:
                - "/"
                - - https://github.com/weaveworks/scope/releases/download
                  - v1.6.4
                  - scope
              mode: '000755'
  EcsInstanceAsg:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
      - Fn::Join:
        - ","
        - - Ref: PubSubnetAz1
          - Ref: PubSubnetAz2
      LaunchConfigurationName:
        Ref: EcsInstanceLc
      MinSize: '1'
      MaxSize:
        Ref: Scale
      DesiredCapacity:
        Ref: Scale
      LoadBalancerNames:
      - Ref: EcsFrontendElasticLoadBalancing
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - 'ECS Instance - '
            - Ref: AWS::StackName
        PropagateAtLaunch: 'true'
  EcsFrontendElasticLoadBalancing:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    DependsOn: InternetGateway
    Properties:
      Listeners:
      - Fn::If:
        - DoDeployExampleApp
        - InstancePort: '80'
          LoadBalancerPort: '80'
          InstanceProtocol: HTTP
          Protocol: HTTP
        - Ref: AWS::NoValue
      - Fn::If:
        - UseWeaveScopeStandalone
        - InstancePort: '4040'        ## Port required by Weave Scope
          LoadBalancerPort: '4040'    ## Port required by Weave Scope to be exposed to LB
          InstanceProtocol: TCP
          Protocol: TCP
        - Ref: AWS::NoValue
      SecurityGroups:
      - Ref: EcsSecurityGroup
      Subnets:
      - Ref: PubSubnetAz1
      - Ref: PubSubnetAz2

#==================================================#
#                    Outputs                       #
#==================================================#
Outputs:
  AppFrontend:
    Condition: DoDeployExampleApp
    Value:
      Fn::Join:
      - ''
      - - http://
        - Fn::GetAtt:
          - EcsFrontendElasticLoadBalancing
          - DNSName
        - ":80"
    Description: Identiorca app frontend
  WeaveScope:
    Condition: UseWeaveScopeStandalone
    Value:
      Fn::Join:
      - ''
      - - http://
        - Fn::GetAtt:
          - EcsFrontendElasticLoadBalancing
          - DNSName
        - ":4040"     ## Port where Weave Scope is exposed
    Description: Weave Scope UI
